--- a/BlankCordovaApp1/BlankCordovaApp1/index.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/index.html
@@ -2,17 +2,25 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>BlankCordovaApp1</title>
+    <title>Reiseplanlegger</title>
 
     <!-- BlankCordovaApp1 references -->
+    <link href="Content/ionic.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
 </head>
-<body>
-    
+<body ng-app="app">
+    <ion-nav-view>
+    </ion-nav-view>
+
     <!-- Cordova reference, this is added to your app when it's built. -->
+    <script src="scripts/ionic.bundle.js"></script>
     <script src="cordova.js"></script>
     <script src="scripts/platformOverrides.js"></script>
-    <script src="scripts/angular.min.js"></script>
     <script src="scripts/index.js"></script>
+
+    <script src="scripts/app.js"></script>
+    <script src="controllers/controllers.js"></script>
+
+
 </body>
 </html>
