--- a/BlankCordovaApp1/BlankCordovaApp1/index.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/index.html
@@ -5,13 +5,16 @@
     <title>Reiseplanlegger</title>
 
     <!-- BlankCordovaApp1 references -->
+
     <link href="css/index.css" rel="stylesheet" />
+    <link href="Content/ionic.css" rel="stylesheet" />
 </head>
 <body ng-app="app">
     <ion-nav-view>
     </ion-nav-view>
     
     <!-- Cordova reference, this is added to your app when it's built. -->
+    <script src="scripts/ionic.bundle.js"></script>
     <script src="cordova.js"></script>
     <script src="scripts/platformOverrides.js"></script>
     <script src="scripts/index.js"></script>
