Preivous trisps and trip creator

--- a/BlankCordovaApp1/BlankCordovaApp1/index.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/index.html
@@ -7,7 +7,9 @@
     <!-- BlankCordovaApp1 references -->
 
     <link href="css/index.css" rel="stylesheet" />
+    <link href="Content/ionicons.css" rel="stylesheet" />
     <link href="Content/ionic.css" rel="stylesheet" />
+
 </head>
 <body ng-app="app">
     <ion-nav-view>
